# sf-sui-example

./: .gitignore  Cargo.toml  README.md
coin-sink/: .env  Cargo.toml
coin-sink/src/: config.rs  lib.rs  main.rs  processor.rs
coin-sink/src/core/: mod.rs  stream.rs  substreams.rs
protos/: Cargo.toml  build.rs
protos/proto/: sui_coin.proto
protos/proto/sf/substreams/v1/: modules.proto
protos/src/pb/: mod.rs  sf.substreams.rpc.v2.rs  sf.substreams.v1.rs  sui_coin_example.rs
sf-modules/: Cargo.toml  substreams.yaml
sf-modules/src/: lib.rs
sf-modules/src/modules/: common.rs  mod.rs
sf-modules/src/modules/map/: map_create_currency.rs  mod.rs
sf-modules/src/sui_structs/: coin.rs  core_sui.rs  mod.rs
