[package]
name = "coin-sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
dotenv = "0.15"
envconfig = "0.10.0"
env_logger = "0.10.0"
eyre = "0.6.8"
futures = { version = "0.3.1", package = "futures", features = ["compat"] }
http = "0.2.3"
log = "0.4.17"
protos = { path = "../protos", features = ["stream"] }
prost = "0.11.9"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["tls-roots"] }
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-retry = "0.3.0"
