[package]
name = "protos"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
stream = ["dep:tonic"]

[dependencies]
http = "0.2.3"
prost = "0.11.9"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["tls-roots"], optional = true }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
