[package]
name = "sf-modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bcs = "0.1.5"
bigdecimal = { version = "0.3.0", features = ["serde"] }
eyre = "0.6.8"
hex = "0.4"
prost = "0.11.9"
prost-types = "0.11.9"
protos = { path = "../protos" }
substreams = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.1.2"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
